--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,12 +32,14 @@ endorsed.classpath=
 excludes=
 file.reference.pircbot.jar=pircbot.jar
 file.reference.Pizza-src=src
+file.reference.sqlite-jdbc-3.8.11.2.jar=sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.pircbot.jar}
+    ${file.reference.pircbot.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
