--- a/wercker.yml
+++ b/wercker.yml
@@ -7,9 +7,6 @@ build:
     - install-packages:
         packages: git openssl pkg-config libssl-dev python wget zlib1g-dev unzip openssh-client unzip
     - script:
-        name: Setting up git LFS
-        code: git lfs install
-    - script:
         name: Downloading ant
         code: wget http://apache.panu.it//ant/binaries/apache-ant-1.9.7-bin.zip
     - script:
@@ -19,4 +16,4 @@ build:
           chmod +x apache-ant-1.9.7/bin/ant
     - script:
         name: Building Project
-        code: apache-ant-1.9.7/bin/ant -f nbbuild.xml -Dnb.internal.action.name=run run
+        code: apache-ant-1.9.7/bin/ant -f nbbuild.xml -Dnb.internal.action.name=build jar
