--- a/wercker.yml
+++ b/wercker.yml
@@ -5,7 +5,10 @@ box: java
 build:
   steps:
     - install-packages:
-        packages: git openssl pkg-config libssl-dev python wget zlib1g-dev unzip openssh-client unzip
+        packages: git openssl pkg-config libssl-dev wget zlib1g-dev unzip openssh-client unzip git-lfs
+    - script:
+        name: Installing git-lfs
+        code: git lfs install
     - script:
         name: Downloading ant
         code: wget http://apache.panu.it//ant/binaries/apache-ant-1.9.7-bin.zip
