--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Pizza.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jython-standalone-2.7.0.jar=jython-standalone-2.7.0.jar
 file.reference.pircbot.jar=pircbot.jar
 file.reference.Pizza-src=src
 file.reference.sqlite-jdbc-3.8.11.2.jar=sqlite-jdbc-3.8.11.2.jar
@@ -39,7 +40,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.pircbot.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.jython-standalone-2.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
