--- a/wercker.yml
+++ b/wercker.yml
@@ -5,10 +5,15 @@ box: java
 build:
   steps:
     - install-packages:
-        packages: git openssl pkg-config libssl-dev wget zlib1g-dev unzip openssh-client unzip git-lfs
+        packages: git openssl pkg-config libssl-dev wget zlib1g-dev unzip openssh-client unzip tar
     - script:
         name: Installing git-lfs
-        code: git lfs install
+        code: |-
+          wget https://github.com/github/git-lfs/releases/download/v1.3.0/git-lfs-linux-amd64-1.3.0.tar.gz
+          tar -xf git-lfs-linux-amd64-1.3.0.tar.gz
+          chmod +x git-lfs-1.3.0/install.sh
+          ./git-lfs-1.3.0/install.sh
+          git lfs install
     - script:
         name: Downloading ant
         code: wget http://apache.panu.it//ant/binaries/apache-ant-1.9.7-bin.zip
