--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,19 @@ sudo: false
 
 jdk:
   - oraclejdk8
-  - oraclejdk7
-  - openjdk6
+#  - oraclejdk7
+#  - openjdk6
 
 script:
+# pura idiozia!
+  - rm -rf *.jar
+  - wget https://repo1.maven.org/maven2/org/python/jython-standalone/2.7.0/jython-standalone-2.7.0.jar
+  - wget https://bbuseruploads.s3.amazonaws.com/e23982bc-4051-4962-b78e-0d9a05c77d05/downloads/f1f52ba0-a7ef-4ad4-8ba3-529026f6ff5e/sqlite-jdbc-3.8.11.2.jar?Signature=vw8YaK6lWPiug%2FNYKUbgExWui6E%3D&Expires=1470080158&AWSAccessKeyId=AKIAIWY5XSVPZPDQYRQQ&versionId=null&response-content-disposition=attachment%3B%20filename%3D%22sqlite-jdbc-3.8.11.2.jar%22
+  - wget http://www.jibble.org/files/pircbot-1.5.0.zip
+  - unzip pircbot-1.5.0.zip
+  - mv -f pircbot-1.5.0/pircbot.jar pircbot.jar
+# fine della follia :/
+
   - ant -f nbbuild.xml -Dnb.internal.action.name=build jar
   
 notifications:
