--- a/wercker.yml
+++ b/wercker.yml
@@ -33,6 +33,15 @@ build:
 #        name: Getting lfs-stored Files
 #        code: git pull
     - script:
+        name: Downloading correct jar files
+        code: |-
+          rm -rf *.jar
+          wget https://repo1.maven.org/maven2/org/python/jython-standalone/2.7.0/jython-standalone-2.7.0.jar
+          wget https://bbuseruploads.s3.amazonaws.com/e23982bc-4051-4962-b78e-0d9a05c77d05/downloads/f1f52ba0-a7ef-4ad4-8ba3-529026f6ff5e/sqlite-jdbc-3.8.11.2.jar?Signature=vw8YaK6lWPiug%2FNYKUbgExWui6E%3D&Expires=1470080158&AWSAccessKeyId=AKIAIWY5XSVPZPDQYRQQ&versionId=null&response-content-disposition=attachment%3B%20filename%3D%22sqlite-jdbc-3.8.11.2.jar%22
+          wget http://www.jibble.org/files/pircbot-1.5.0.zip
+          unzip pircbot-1.5.0.zip
+          mv -f pircbot-1.5.0/pircbot.jar pircbot.jar
+    - script:
         name: Check jar files
         code: |-
           ls -lh jython-standalone-2.7.0.jar
