--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Pizza
 application.vendor=benat
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -36,7 +37,7 @@ file.reference.Pizza-src=src
 file.reference.sqlite-jdbc-3.8.11.2.jar=sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.pircbot.jar}:\
@@ -88,6 +89,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
