--- a/wercker.yml
+++ b/wercker.yml
@@ -50,3 +50,43 @@ build:
     - script:
         name: Building Project
         code: apache-ant-1.9.7/bin/ant -f nbbuild.xml -Dnb.internal.action.name=build jar
+deploy :
+  steps :
+    - install-packages:
+        packages: git openssl pkg-config libssl-dev python wget zlib1g-dev unzip openssh-client rsync
+    - script:
+        name: Downloading PIP
+        code: |-
+          curl -O https://bootstrap.pypa.io/get-pip.py
+          sudo python get-pip.py
+    - script:
+        name: Testing Python
+        code: python --version
+    - script:
+        name: Testing PIP
+        code: pip --version
+    - script:
+        name: Installing MkDocs
+        code: sudo pip install mkdocs
+    - script:
+        name: Building Documentation
+        code: |-
+          cd Documentazione
+          mkdocs build
+          cd ../
+    - script:
+        name: Configure git
+        code: |-
+          git config --global user.email "pleasemailus@wercker.com"
+          git config --global user.name "werckerbot"
+          git config --global push.default matching
+    - script:
+        name: Deploy to github pages
+        code: |-
+          cd Documentazione
+          git clone -b gh-pages $GIT_REMOTE
+          rsync -avh --progress /pipeline/source/Documentazione/site/ ./Pizza
+          cd Pizza
+          git add .
+          git commit -m "deploy commit from $WERCKER_STARTED_BY" --quiet &> /dev/null
+          git push --quiet &> /dev/null
