--- a/wercker.yml
+++ b/wercker.yml
@@ -88,5 +88,5 @@ deploy :
           rsync -avh --progress /pipeline/source/Documentazione/site/ ./Pizza
           cd Pizza
           git add .
-          git commit -m "deploy commit from $WERCKER_STARTED_BY" --quiet &> /dev/null
+          git commit -m "[ci skip]deploy commit from $WERCKER_STARTED_BY" --quiet &> /dev/null
           git push --quiet &> /dev/null
