--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Pizza
-application.vendor=benat
+application.vendor=pierotofy.it
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -48,12 +48,18 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${file.reference.jython-standalone-2.7.0.jar}:\
+    ${file.reference.pircbot.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jython-standalone-2.7.0.jar}:\
+    ${file.reference.pircbot.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -92,13 +98,19 @@ platform.active=default_platform
 project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jython-standalone-2.7.0.jar}:\
+    ${file.reference.pircbot.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.jython-standalone-2.7.0.jar}:\
+    ${file.reference.pircbot.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 source.encoding=UTF-8
 src.dir=${file.reference.Pizza-src}
