--- a/Documentazione/mkdocs.yml
+++ b/Documentazione/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
 - Home: index.md
 - Compilazione: compilazione.md
 - Utilizzo: utilizzo.md
+- Plugins: plugin.md
 
 - About:
     - Community: pierotofy.md
