--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.jar=${dist.dir}/Pizza.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javax.json-1.0.jar=javax.json-1.0.jar
 file.reference.jython-standalone-2.7.0.jar=jython-standalone-2.7.0.jar
 file.reference.pircbot.jar=pircbot.jar
 file.reference.Pizza-src=src
@@ -42,7 +43,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.pircbot.jar}:\
     ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
-    ${file.reference.jython-standalone-2.7.0.jar}
+    ${file.reference.jython-standalone-2.7.0.jar}:\
+    ${file.reference.javax.json-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +53,8 @@ javac.processorpath=\
     ${javac.classpath}:\
     ${file.reference.jython-standalone-2.7.0.jar}:\
     ${file.reference.pircbot.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.javax.json-1.0.jar}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -59,7 +62,8 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${file.reference.jython-standalone-2.7.0.jar}:\
     ${file.reference.pircbot.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.javax.json-1.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -101,7 +105,8 @@ run.classpath=\
     ${build.classes.dir}:\
     ${file.reference.jython-standalone-2.7.0.jar}:\
     ${file.reference.pircbot.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.javax.json-1.0.jar}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
@@ -111,6 +116,7 @@ run.test.classpath=\
     ${build.test.classes.dir}:\
     ${file.reference.jython-standalone-2.7.0.jar}:\
     ${file.reference.pircbot.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.javax.json-1.0.jar}
 source.encoding=UTF-8
 src.dir=${file.reference.Pizza-src}
