--- a/wercker.yml
+++ b/wercker.yml
@@ -41,6 +41,8 @@ build:
           wget http://www.jibble.org/files/pircbot-1.5.0.zip
           unzip pircbot-1.5.0.zip
           mv -f pircbot-1.5.0/pircbot.jar pircbot.jar
+          wget http://www.java2s.com/Code/JarDownload/javax.json/javax.json-1.0.jar.zip
+          unzip javax.json-1.0.jar.zip
     - script:
         name: Check jar files
         code: |-
