--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 *.db
 *.war
 *.ear
+*.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /nbproject/private/
 /build/
 /dist/
+/target/
