Aggiunto plugin per il forum
Aggiunto il plugin per il forum pierotofy.it
Modificato l'avviso di licenza

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>javassist</artifactId>
             <version>3.20.0-GA</version>
         </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
