--- a/wercker.yml
+++ b/wercker.yml
@@ -48,7 +48,7 @@ deploy :
         code: |-
           cd Documentazione
           git clone -b gh-pages $GIT_REMOTE
-          rsync -avh --progress Documentazione/site/ Pizza
+          rsync -ah site Pizza
           cd Pizza
           git add .
           git commit -m "[ci skip]deploy commit from $WERCKER_STARTED_BY" --quiet &> /dev/null
