--- a/wercker.yml
+++ b/wercker.yml
@@ -48,7 +48,8 @@ deploy :
         code: |-
           cd Documentazione
           git clone -b gh-pages $GIT_REMOTE
-          rsync -ah site Pizza
+          sudo chmod 0777 -R site
+          sudo rsync -ah ./site/ ./Pizza/
           cd Pizza
           git add .
           git commit -m "[ci skip]deploy commit from $WERCKER_STARTED_BY" --quiet &> /dev/null
