--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
     <artifactId>PizzaBot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -81,6 +87,12 @@
             <groupId>pircbot</groupId>
             <artifactId>pircbot</artifactId>
             <version>1.5.0</version>
+        </dependency>
+        <!-- https://jitpack.io/#gianluca-nitti/java-expr-eval -->
+        <dependency>
+            <groupId>com.github.gianluca-nitti</groupId>
+            <artifactId>java-expr-eval</artifactId>
+            <version>v1.0</version>
         </dependency>
     </dependencies>
     <properties>
