[ci skip] Piccola revisione alla documentazione

--- a/Documentazione/mkdocs.yml
+++ b/Documentazione/mkdocs.yml
@@ -6,6 +6,7 @@ pages:
 - Utilizzo: utilizzo.md
 - Plugins: plugin.md
 - Javadoc: javadoc.md
+- Convenzioni: convenzioni.md
 
 - About:
     - Community: pierotofy.md
