Force output directory for jar to be "target"

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 							<!--<classpathLayoutType>repository</classpathLayoutType>-->
 						</manifest>
 					</archive>
+					<outputDirectory>target</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
