Add mkdocs to packages

--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ build:
 deploy :
   steps :
     - install-packages:
-        packages: git openssl pkg-config libssl-dev python wget zlib1g-dev unzip openssh-client rsync maven
+        packages: git openssl pkg-config libssl-dev python wget zlib1g-dev unzip openssh-client rsync maven mkdocs
     - script:
         name: Installing MkDocs
         code: sudo apt install mkdocs
